--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  background-color: black;
+  color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes rotate {
+  from {
+    transform: translate(0%, -50%) scale(1.4);
+  }
+
+  to {
+    transform: translate(150%, -50%) scale(1.4);
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.card_flip {
+  transform: rotateY(180deg);
 }
